--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "w-guide",
+  "name": "wguide",
   "version": "1.0.0",
   "description": "React package",
-  "main": "index.js",
+  "main": "build/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "repository": {
     "type": "git",
@@ -23,8 +25,20 @@
   },
   "homepage": "https://github.com/khacywin/w-guide#readme",
   "devDependencies": {
+    "@babel/core": "^7.13.14",
+    "@storybook/addon-actions": "^6.2.2",
+    "@storybook/addon-essentials": "^6.2.2",
+    "@storybook/addon-links": "^6.2.2",
+    "@storybook/react": "^6.2.2",
+    "@types/node": "^14.14.37",
+    "@types/react": "^17.0.3",
+    "babel-loader": "^8.2.2",
+    "node-sass": "^4.14.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "rollup": "^2.44.0"
+    "rollup": "^2.44.0",
+    "rollup-plugin-typescript2": "^0.30.0",
+    "ts-loader": "^8.1.0",
+    "typescript": "^4.2.3"
   }
 }
