--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "wguide",
   "version": "1.0.0",
   "description": "React package",
-  "main": "build/index.js",
+  "main": "dist/index.js",
+  "module": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "build": "rollup -c"
   },
   "repository": {
     "type": "git",
@@ -27,18 +29,21 @@
   "devDependencies": {
     "@babel/core": "^7.13.14",
     "@storybook/addon-actions": "^6.2.2",
-    "@storybook/addon-essentials": "^6.2.2",
-    "@storybook/addon-links": "^6.2.2",
+    "@storybook/addon-links": "^5.3.21",
+    "@storybook/addons": "^5.3.21",
     "@storybook/react": "^6.2.2",
     "@types/node": "^14.14.37",
     "@types/react": "^17.0.3",
     "babel-loader": "^8.2.2",
     "node-sass": "^4.14.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
     "rollup": "^2.44.0",
+    "rollup-plugin-postcss": "^4.0.0",
     "rollup-plugin-typescript2": "^0.30.0",
     "ts-loader": "^8.1.0",
     "typescript": "^4.2.3"
+  },
+  "peerDependencies": {
+    "react": ">=16.8.0",
+    "react-dom": ">=16.8.0"
   }
 }
