--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "declaration": true,
-    "declarationDir": "build",
+    "declarationDir": "dist",
     "module": "ES2015",
     "target": "ES6",
     "sourceMap": true,
@@ -16,7 +16,7 @@
   "include": [
     "src/**/*",
     "src/*.d.ts"
-, "stories"  ],
+, "stories", "stories"  ],
   "exclude": [
     "node_modules",
     "build",
