--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "@types/react": "^17.0.3",
     "babel-loader": "^8.2.2",
     "node-sass": "^4.14.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "rollup": "^2.44.0",
     "rollup-plugin-postcss": "^4.0.0",
     "rollup-plugin-typescript2": "^0.30.0",
