--- a/package.json
+++ b/package.json
@@ -34,7 +34,12 @@
     "@storybook/react": "^6.2.2",
     "@types/node": "^14.14.37",
     "@types/react": "^17.0.3",
+    "@typescript-eslint/eslint-plugin": "^2.7.0",
+    "@typescript-eslint/parser": "^2.7.0",
     "babel-loader": "^8.2.2",
+    "eslint": "^6.6.0",
+    "eslint-config-prettier": "^6.5.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "node-sass": "^4.14.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -42,6 +47,8 @@
     "rollup-plugin-postcss": "^4.0.0",
     "rollup-plugin-typescript2": "^0.30.0",
     "ts-loader": "^8.1.0",
+    "tslint": "^6.1.3",
+    "tslint-react-hooks": "^2.2.2",
     "typescript": "^4.2.3"
   },
   "peerDependencies": {
