--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-dom": "^17.0.2",
     "rollup": "^2.44.0",
     "rollup-plugin-postcss": "^4.0.0",
+    "rollup-plugin-svg": "^2.0.0",
     "rollup-plugin-typescript2": "^0.30.0",
     "ts-loader": "^8.1.0",
     "typescript": "^4.2.3"
