--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "guide-user",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "React package about user dashboard",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
@@ -50,7 +50,7 @@
     "typescript": "^4.2.3"
   },
   "peerDependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react": ">=16.8.0",
+    "react-dom": ">=16.8.0"
   }
 }
